tests/baselines/reference/parserMemberAccessorDeclaration9.errors.txt
==== tests/cases/compiler/parserMemberAccessorDeclaration9.ts (2 errors) ====
    class C {
        static public get Foo() { }
               ~~~~~~
!!! parserMemberAccessorDeclaration9.ts(2,12): error TS1029: 'public' modifier must precede 'static' modifier.
                          ~~~
!!! parserMemberAccessorDeclaration9.ts(2,23): error TS2126: Getters must return a value.
    }